data/all_generated_tests/raw_wast_tests/if_IncorrectConditionEvaluation_1686.wast
;; 7. **Test Combined `if` and `br_if` Instruction**:    - Description: Combination of `if` and `br_if` where `if` determines code block and `br_if` within that block conditionally branches.    - Constraint: Ensures accurate sequential conditional evaluations where `if` preempts `br_if`.    - Incorrect Condition Evaluation: Test if Wizard Engine fails to correctly resolve compounded conditional branches leading to flow errors.

(assert_invalid
  (module (func $if-br_if-combined-test (result i32)
    (if (result i32) (i32.const 1)
      (then 
        (i32.const 42) 
        (br_if 0 (i32.const 0)) 
        (i32.const 1)
      )
      (else 
        (i32.const 24) 
        (br_if 1 (i32.const 1)) 
        (i32.const 2)
      )
    )
  ))
  "type mismatch"
)